# ghg

./: Pasta1.xlsx  app.py  pyproject.toml  requirements.txt
