[tool.poetry]
name = "antonio"
version = "0.1.0"
description = ""
authors = ["Prof. Wanderlei Malaquias Pereira Junior <55900120+wmpjrufg@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
